--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -110,3 +110,115 @@ user-select: none; /* Standard */
     color: #000000;
 }
 
+@media (max-width: 576px) {
+    html {
+        -webkit-tap-highlight-color: transparent
+      }
+    .container {
+        width: 100%;
+        height: 100vh;
+        background-color: black;
+        margin: 0px auto;
+        position: relative;
+    }
+    
+    .inputCalc {
+        top: 10%;
+        position: absolute;
+        box-sizing: border-box;
+        width: 90%;
+        height: 10%;
+        right: 2%;
+        background-color: black;
+        color: white;
+        font-size: 20vw;
+        text-align: right;
+        border: none;
+        outline: none;
+    }
+    
+    .grid-container {
+        display: grid;
+        position: absolute;
+        width: 90%;
+        height: 60%;
+        left: 5%;
+        bottom: 5%;
+        grid-template-areas: 
+        "AC plusMinus remain divide"
+        "seven eight nine multiply"
+        "four five six minus"
+        "one two three plus"
+        "zero zero point equal";
+        grid-row-gap: 8%;
+        grid-column-gap: 8%;
+        padding: 5px;
+        .grid-item {
+            background-color: #333333;
+            border-radius: 100%;
+            width: 100%;
+            height: 100%;
+            border: none;
+            cursor: pointer;
+            &:active {
+                background-color: rgb(34, 34, 34);
+            }
+        }
+        .AC,.plusMinus,.remain {
+            background-color: #a5a5a5;
+            &:active {
+                background-color: #6b6b6b;
+            }
+        }
+        .zero {
+            width: 100%;
+            border-radius: calc(67px / 2);
+        }
+        .plus,.minus,.divide,.equal,.multiply {
+            background-color: #21751e;
+        }
+        .plus,.minus,.divide,.equal,.multiply {
+            &:active {
+                background-color: #a76400;
+            }
+            
+        }
+    }
+    
+    @each $grid in one,two,three,four,five,six,seven,eight,nine,zero,equal,plus,plusMinus,multiply,remain,divide,AC,point,minus {
+        .#{$grid} {grid-area: $grid}
+    }
+    
+    .number {
+        position: absolute;
+        color: white;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        text-align: center;
+        -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+    
+    }
+    
+    .symbol {
+        position: absolute;
+        width: 67px;
+        height: 67px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serifsive;
+        color: white;
+        text-align: center;
+        font-size: 37px;
+        -webkit-user-select: none; /* Safari */        
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* IE10+/Edge */
+        user-select: none; /* Standard */
+        
+        
+    }
+    .grey {
+        color: #000000;
+    }
+
+}
