--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -14,7 +14,7 @@ html {
   box-sizing: border-box;
   width: 375px;
   height: 80px;
-  background-color: black;
+  background-color: transparent;
   color: white;
   font-size: 80px;
   text-align: right;
@@ -163,11 +163,11 @@ html {
     top: 10%;
     position: absolute;
     box-sizing: border-box;
-    width: 90%;
+    width: 100%;
     height: 10%;
     right: 0;
     padding-left: 5%;
-    background-color: black;
+    background-color: transparent;
     color: white;
     font-size: 20vw;
     text-align: right;
@@ -255,6 +255,7 @@ html {
     grid-area: minus; }
   .number {
     position: absolute;
+    top: 20%;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
@@ -269,8 +270,7 @@ html {
     /* Standard */ }
   .symbol {
     position: absolute;
-    width: 67px;
-    height: 67px;
+    top: 10%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serifsive;
     color: white;
     text-align: center;
