--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -15,7 +15,7 @@ html {
     box-sizing: border-box;
     width: 375px;
     height: 80px;
-    background-color: black;
+    background-color: transparent;
     color: white;
     font-size: 80px;
     text-align: right;
@@ -129,11 +129,11 @@ user-select: none; /* Standard */
         top: 10%;
         position: absolute;
         box-sizing: border-box;
-        width: 90%;
+        width: 100%;
         height: 10%;
         right: 0;
         padding-left: 5%;
-        background-color: black;
+        background-color: transparent;
         color: white;
         font-size: 20vw;
         text-align: right;
@@ -206,6 +206,7 @@ user-select: none; /* Standard */
     
     .number {
         position: absolute;
+        top: 20%;
         color: white;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 30px;
@@ -219,8 +220,7 @@ user-select: none; /* Standard */
     
     .symbol {
         position: absolute;
-        width: 67px;
-        height: 67px;
+        top: 10%;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serifsive;
         color: white;
         text-align: center;
